# NEAR-Cosmos-SDK

./: .env.example  .gitignore  CHANGELOG-00.md  CHANGELOG-01.md  CHANGELOG.md  CLAUDE.md  COSMOS_SDK_COMPATIBILITY_PLAN.md  CURRENT_STATUS.md  Cargo.toml  PHASE_2_DEVELOPMENT_PLAN.md  README.md  TECHNICAL_DEBT.md  TESTING_RESULTS.md  deploy-testnet.sh  setup-deployment.sh  setup-testing.sh  test-api-design.js  test-integration.sh
cosmos_sdk_near/: Cargo.toml
cosmos_sdk_near/src/: lib.rs
cosmos_sdk_near/src/modules/: mod.rs
cosmos_sdk_near/src/modules/bank/: mod.rs
cosmos_sdk_near/src/modules/gov/: mod.rs
cosmos_sdk_near/src/modules/ibc/: mod.rs
cosmos_sdk_near/src/modules/staking/: mod.rs
cosmos_sdk_near/tests/: block_integration_tests.rs  e2e_integration_tests.rs  ibc_channel_integration_tests.rs  ibc_client_integration_tests.rs  ibc_connection_integration_tests.rs  ibc_integration_tests.rs  ibc_multistore_integration_tests.rs  integration_tests.rs
crates/cosmos-sdk-contract/: CHANGELOG.md  Cargo.toml  DEPLOYMENT_SOLUTION.md  LOCAL_DEPLOYMENT_GUIDE.md  LOCAL_DEVELOPMENT.md  MODULAR_IMPLEMENTATION_PLAN.md  README.md  build-wasm-module.sh  check-balance.sh  deploy-local-sandbox.sh  deploy-local.sh  deploy-modular.sh  deploy-sandbox.sh  deploy-testnet.sh  get-testnet-near.sh  migrate-to-modular.sh  relayer-config-local.toml  test-cosmwasm-testnet.sh  test-existing-deployment.sh
crates/cosmos-sdk-contract/minimal-test/: Cargo.toml  build.sh
crates/cosmos-sdk-contract/minimal-test/src/: lib.rs
crates/cosmos-sdk-contract/scripts/: check_deployment.sh  deploy-testnet.sh  deploy_testnet.sh
crates/cosmos-sdk-contract/src/: lib.rs  lib_clean.rs  lib_complex_backup.rs  lib_modular.rs  lib_simple.rs  lib_tests.rs
crates/cosmos-sdk-contract/src/contracts/: bank_contract.rs  cw20_base.rs  ibc_channel_contract.rs  ibc_client_contract.rs  ibc_connection_contract.rs  ibc_transfer_contract.rs  mod.rs  router_contract.rs  staking_contract.rs  state_sync_contract.rs  wasm_module_contract.rs
crates/cosmos-sdk-contract/src/crypto/: cosmos_signatures.rs  mod.rs
crates/cosmos-sdk-contract/src/handler/: mod.rs  msg_router.rs  tx_decoder.rs  tx_handler.rs
crates/cosmos-sdk-contract/src/modules/: mod.rs
crates/cosmos-sdk-contract/src/types/: cosmos_messages.rs  cosmos_tx.rs  mod.rs
crates/cosmos-sdk-contract/tests/: bank_integration_tests.rs  block_integration_tests.rs  cosmwasm_compatibility_test.rs  cosmwasm_performance_benchmarks.rs  cw20_integration_test.rs  cw20_local_deployment_test.rs  cw721_integration_test.rs  e2e_integration_tests.rs  governance_integration_tests.rs  ibc_channel_integration_tests.rs  ibc_client_integration_tests.rs  ibc_connection_integration_tests.rs  ibc_multistore_integration_tests.rs  local_deployment_integration_tests.rs  minimal_contract_test.rs  minimal_wasm_test.rs  modular_wasm_test.rs  phase2_integration_tests.rs  public_api_integration_tests.rs  simple_multistore_test.rs  staking_integration_tests.rs  testnet_integration_tests.rs  transaction_processing_integration_tests.rs  wasm_module_performance_test.rs  wasm_module_test.rs
crates/ibc-relayer/: Cargo.toml  TESTNET_SETUP.md  start_relayer.sh
crates/ibc-relayer/config/: cosmwasm.toml  local-testnet.toml  relayer.toml
crates/ibc-relayer/docker/: README.md  docker-compose.yml
crates/ibc-relayer/docker/wasmd/: init.sh
crates/ibc-relayer/examples/: basic_usage.rs  cosmos_keystore_integration.rs  cosmos_signing_example.rs  key_management_example.rs
crates/ibc-relayer/scripts/: check-docker.sh  complete_ibc_handshakes.sh  create_ibc_channel.sh  create_ibc_client.sh  create_ibc_connection.sh  create_simple_ibc_client.sh  generate_cosmos_key.sh  generate_test_key.rs  local-testnet.sh  setup_testnet.sh
crates/ibc-relayer/src/: lib.rs  main.rs  testnet.rs
crates/ibc-relayer/src/chains/: cosmos.rs  cosmos_minimal.rs  factory.rs  mod.rs  near.rs  near_modular.rs  near_simple.rs
crates/ibc-relayer/src/config/: mod.rs
crates/ibc-relayer/src/cosmwasm/: execution_service.rs  executor.rs  host_functions.rs  key_manager.rs  mod.rs  relayer_service.rs  state.rs  types.rs
crates/ibc-relayer/src/events/: cosmos_events.rs  mod.rs  near_events.rs
crates/ibc-relayer/src/keystore/: cosmos.rs  mod.rs  near.rs  storage.rs  test_utils.rs
crates/ibc-relayer/src/light_clients/: mod.rs  near_client.rs  tendermint_client.rs
crates/ibc-relayer/src/metrics/: mod.rs
crates/ibc-relayer/src/monitor/: mod.rs  (+1 more)
crates/ibc-relayer/tests/: bidirectional_relay_tests.rs  client_update_integration_tests.rs  cosmos_chain_integration_tests.rs  cosmos_key_tests.rs  cosmos_query_methods_tests.rs  cross_module_integration_tests.rs  enhanced_cosmos_integration_tests.rs  enhanced_packet_relay_tests.rs  error_recovery_integration_tests.rs  event_monitoring_tests.rs  handshake_automation_tests.rs  key_manager_cli_tests.rs  keystore_integration_tests.rs  local_testnet_integration_tests.rs  modular_error_tests.rs  modular_event_tests.rs  modular_performance_tests.rs  modular_relay_tests.rs  near_key_tests.rs  packet_relay_integration_tests.rs  relay_engine_tests.rs  script_validation_tests.rs  test_summary.md  testnet_deployment_tests.rs  timeout_detection_tests.rs
crates/wasm-module-contract/: CHANGELOG.md  Cargo.toml  README.md  WASMER_INTEGRATION.md  WASMER_RELAYER_ARCHITECTURE.md  deploy-testnet.sh  test-cw20-testnet.sh
crates/wasm-module-contract/scripts/: deploy-local.sh  deploy-wasm-testnet.sh  test-local-cosmwasm.sh  test-simple-cosmwasm.sh
crates/wasm-module-contract/src/: address.rs  execution_queue.rs  host_functions.rs  ibc_host_functions.rs  lib.rs  message_translator.rs  test_utils.rs  types.rs  vm_executor.rs  wasm_runtime.rs  wasmer_executor.rs
crates/wasm-module-contract/tests/: cw20_tests.rs  execution_queue_tests.rs  integration_tests.rs  relayer_integration_test.rs  router_integration_tests.rs  vm_runtime_tests.rs  wasmer_integration_tests.rs
ibc_light_client/: Cargo.toml
ibc_light_client/src/: crypto.rs  lib.rs  verification.rs
ibc_light_client/tests/: integration_tests.rs
(+813 files in other folders)
