[package]
name = "cosmos_sdk_near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
borsh = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography for IBC Ed25519 signature verification
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Time handling for IBC trust periods and timestamps
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# JSON Schema for NEAR SDK
schemars = "0.8"

[dev-dependencies]
near-workspaces = { version = "0.11", features = ["experimental"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.21"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true