[package]
name = "ibc_light_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
borsh = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography for Ed25519 signature verification
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Time handling for trust periods and timestamps
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# JSON Schema for NEAR SDK
schemars = "0.8"

[dev-dependencies]
near-workspaces = "0.11"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
near-sdk = { version = "5.1.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true