[package]
name = "cosmos-sdk-contract"
version = "0.9.0"
edition = "2021"
authors = ["Proxima Contributors"]
description = "Proxima smart contract: Complete Cosmos SDK runtime on NEAR with full IBC infrastructure"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bpolania/NEAR-Cosmos-SDK"
homepage = "https://github.com/bpolania/NEAR-Cosmos-SDK"
keywords = ["cosmos-sdk", "near", "ibc", "smart-contract", "cross-chain"]
categories = ["cryptography", "network-programming", "blockchain"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NEAR SDK for smart contract development
near-sdk = { version = "5.1.0", features = ["legacy"] }

# Use workspace dependencies for consistency
borsh = { workspace = true }  
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

# NEAR-specific dependencies
schemars = "0.8"

[dev-dependencies]
# Use workspace dependencies for testing
near-workspaces = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

# NEAR SDK testing features
near-sdk = { version = "5.1.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true