[package]
name = "cosmos-sdk-contract"
version = "0.9.0"
edition = "2021"
authors = ["Proxima Contributors"]
description = "Proxima smart contract: Complete Cosmos SDK runtime on NEAR with full IBC infrastructure"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bpolania/NEAR-Cosmos-SDK"
homepage = "https://github.com/bpolania/NEAR-Cosmos-SDK"
keywords = ["cosmos-sdk", "near", "ibc", "smart-contract", "cross-chain"]
categories = ["cryptography", "network-programming", "blockchain"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NEAR SDK for smart contract development
near-sdk = { version = "5.1.0", features = ["legacy"] }

# Use specific versions since contract is excluded from workspace
borsh = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# NEAR-specific dependencies
schemars = "0.8"

[dev-dependencies]
# Use specific versions for testing since contract is excluded from workspace
near-workspaces = { version = "0.11", features = ["experimental"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.21"

# NEAR SDK testing features
near-sdk = { version = "5.1.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true