[package]
name = "ibc-relayer"
version = "0.9.0"
edition = "2021"
authors = ["Proxima Contributors"]
description = "Proxima IBC relayer: Production-ready packet relay for bridging NEAR and Cosmos ecosystems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bpolania/NEAR-Cosmos-SDK"
homepage = "https://github.com/bpolania/NEAR-Cosmos-SDK"
keywords = ["ibc", "near", "cosmos", "relayer", "cross-chain"]
categories = ["cryptography", "network-programming", "blockchain"]

[lib]
name = "ibc_relayer"
path = "src/lib.rs"

[[bin]]
name = "relayer"
path = "src/main.rs"

[[bin]]
name = "key-manager"
path = "src/bin/key-manager.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "cosmos_keystore_integration"
path = "examples/cosmos_keystore_integration.rs"

[dependencies]
# Use workspace dependencies for consistency
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

# NEAR integration - use exact versions matching jsonrpc-client 0.17.0
near-jsonrpc-client = "0.17.0"
near-jsonrpc-primitives = "0.30.3"
near-primitives = "0.30.3"
near-crypto = "0.30.3"

# Cosmos integration  
cosmos-sdk-proto = "0.21"
tendermint = "0.34"
tendermint-rpc = "0.34"
tendermint-proto = "0.34"
secp256k1 = { version = "0.28", features = ["hashes"] }
prost = "0.12"
prost-types = "0.12"

# Encryption and key management
aes-gcm = "0.10"
argon2 = "0.5"
bech32 = "0.9"
shellexpand = "3.1"
rand = "0.8"
rpassword = "7.3"

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
axum = { version = "0.7", optional = true }

# Async utilities
async-trait = "0.1"
pin-project = "1.0"
stream-cancel = "0.8"

# Configuration
config = "0.14"
dirs = "5.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
humantime = "2.1"
fastrand = "2.0"

[dev-dependencies]
# Use workspace dependencies for testing
near-workspaces = { workspace = true }

# Testing utilities
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.5"

[features]
default = ["metrics"]
metrics = ["prometheus", "axum"]